@@ -1,3 +1,8 @@
+Sat Jun 13 09:58:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* marshal.c (r_ivar): should not set internal encoding ivar as an
+	  ordinary ivar.  [ruby-dev:38596]
+
 Sat Jun 13 07:08:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_eval.c (rb_f_local_variables): now returns symbols.  a patch from
